# ai-hedge-fund

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run.sh
.github/workflows/: collect-crypto-data.yml  sync-upstream.yml  test.yml
app/backend/: main.py
app/frontend/: package-lock.json  package.json
data/crypto/: README.md
data/macro/: DXY_1d.json  GOLD_1d.json  TNX_1d.json  VIX_1d.json
data/polymarket/: analysis_iran_feb2026.json  btc_1h_feb2026.csv  btc_1m_feb28_binance.csv  eth_1h_feb2026.csv  markets_feb2026.json  markets_jan2025.json
docs/: ui-guide.md
scripts/: backfill_onchain.py  backfill_perp_ohlcv.py  collect_crypto_data.py  collect_macro_data.py  collect_orderbook.py  collect_polymarket_ticks.py  download_stock_data.py  generate_fixtures.py  run_btc_backtest.py  run_crypto_analysis.py  run_nvda_backtest.py  run_optimization.py  seed_btc_history.py  start_collectors.sh  stop_collectors.sh  test_btc_engine_e2e.py  test_paper_trading.py
scripts/polymarket/: analyze_iran_feb2026.py  analyze_signals.py  fetch_binance_1m_feb28.py  fetch_crypto_feb2026.py  fetch_crypto_prices.py  fetch_markets.py  fetch_markets_feb2026.py
src/: config.py
src/agents/: technicals.py
src/backtesting/: btc_engine.py  cost_model.py  engine.py  metrics.py  optimizer.py  perpetual.py  portfolio.py  trader.py  types.py
src/cli/: live_trading.py
src/core/: __init__.py  constant.py  event.py  gateway.py  objects.py  oms.py  strategy.py
src/data/: crypto.py  funding_rates.py  historical_store.py  onchain_store.py  orderbook_store.py  polymarket_tick_store.py  sentiment_nlp.py
src/gateways/: __init__.py  alpaca_gateway.py  ccxt_gateway.py  paper_gateway.py
src/live/: __init__.py  alerting.py  monitor.py  scheduler.py
src/llm/: models.py
src/strategies/: crypto_ema_strategy.py  ema_strategy.py  llm_crypto_strategy.py
src/trading/: __init__.py  executor.py  orders.py
tests/: test_crypto_data.py  test_technical_indicators.py  test_ui_e2e.py
(+93 files in other folders)
